--- a/index.html
+++ b/index.html
@@ -24,6 +24,16 @@
       overflow-y: auto;
     }
 
+    #ar-overlay {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      pointer-events: none;
+      z-index: 9999;
+    }
+
     #loading-screen {
       position: fixed;
       top: 0;
@@ -64,7 +74,7 @@
       <div id="loading-text">Preparing mission...</div>
     </div>
   </div>
-  <div id="error-overlay"></div>
+  <div id="ar-overlay"></div>
   <div id="root"></div>
   <script type="module" src="/src/main.tsx"></script>
 </body>
